# glif

./: .envrc  .gitignore  AUTHORS  Cargo.toml  GNUmakefile  M_.glif  Makefile  Q_.glif  README.md  Xargo.toml  build.rs  flake.nix
.cargo/: config.toml  kyou
.github/: dependabot.yml
.github/workflows/: rust.yml
doc/linux-mimetypes/: text-vnd.mfek.glifjson.xml  text-vnd.ufo.glif.xml  vnd.mfek.glifjson.xml  vnd.ufo.glif.xml
examples/: M_.glif  M_.glifjson  Q_.glif  Q_.glifjson  S_.glif  S_.glifjson  S_.rhigh.layered.glifjson
examples/ExportTestUfo.ufo/: COMMAND.txt  fontinfo.plist
examples/ExportTestUfo.ufo/glyphs.4/: Q_wtf.glif
examples/ExportTestUfo.ufo/glyphs.G_R_E_E_N_/: Q_wtf.glif
examples/ExportTestUfo.ufo/glyphs.L_oops/: Q_wtf.glif
examples/ExportTestUfo.ufo/glyphs.MFEK/: art.glif  art.glifjson  new.glif
examples/ExportTestUfo.ufo/glyphs.cutout/: Q_wtf.glif
examples/ImagesExample.ufo/glyphs/: K_.glif  Q_.glif
examples/Layered.ufo/: fontinfo.plist  metainfo.plist
examples/Layered.ufo/glyphs/: a.high.glif  a.low.glif  b.high.glif  b.low.glif
mk/: cargo_config.sh
resources/: MFEKglif.desktop  default_keymap.xml
resources/fonts/: MFEKglifIconFont.sfd
resources/fonts/MFEKglifIconFont.ufo/: fontinfo.plist
resources/fonts/MFEKglifIconFont.ufo/glyphs/: anchor.glif  closedeye.glif  contents.plist  copy.glif  cut.glif  dash.glif  export.glif  globe.glif  guidelines.glif  intersection.glif  layers.glif  left.glif  minus.glif  openeye.glif  pan.glif  refresh.glif  reject.glif  rename.glif  right.glif  save.glif  select.glif  settings.glif  ufo.glif  up.glif  venn.glif  vws.glif  zoom.glif
resources/icons/: gen.py  gen.sh
src/: args.rs  constants.rs  events.rs  filedialog.rs  glifparser.rs  imgui.rs  io.rs  ipc.rs  main.rs  main_winit.rs  opengl.rs  please_delete.rs  reclutch_skia.rs  renderer.rs  settings.rs  state.rs  system_fonts.rs  util.rs  window.rs
src/command/: default_keymap.xml  mod.rs
src/contour_operations/: dashalongpath.rs  mod.rs  patternalongpath.rs  variablewidthstroke.rs
src/editor/: contours.rs  debug.rs  events.rs  export.rs  filesystem_watch.rs  headless.rs  history.rs  images.rs  input.rs  io.rs  layers.rs  macros.rs  mod.rs  operations.rs  selection.rs  tools.rs  tunni.rs  util.rs  viewport.rs
src/editor/contour_handlers/: cubic.rs  mod.rs  quad.rs
src/editor/io/: mod.rs
src/events/: console.rs  measure.rs  mod.rs  pan.rs  pen.rs  prelude.rs  select.rs  vws.rs  zoom.rs
src/events/console/: commands.rs  mod.rs
src/imgui/: icons.rs  mod.rs  support.rs
src/opengl/: imgui.rs  skia.rs
src/opengl/imgui/: icons.rs
src/opengl/imgui/icons/: data.rs
src/reclutch_skia/: error.rs
src/render/: console.rs  grid.rs  measure.rs  mod.rs  speed_visualization.rs
src/renderer/: anchors.rs  console.rs  constants.rs  glyph.rs  grid.rs  guidelines.rs  mod.rs  points.rs  selbox.rs  string.rs  viewport.rs
src/renderer/points/: calc.rs  mod.rs  names.rs
src/state/: history.rs  mod.rs  toggles.rs  tool_data.rs
src/system_fonts/: error.rs  mod.rs
src/tool_behaviors/: add_guideline.rs  draw_pivot.rs  mod.rs  move_glyph.rs  move_guideline.rs  move_handle.rs  move_image.rs  move_point.rs  move_tunni_line.rs  move_tunni_point.rs  move_vws_handle.rs  pan.rs  prelude.rs  rotate_image.rs  rotate_selection.rs  selection_box.rs  zoom_scroll.rs
src/tools/: _vws.rs  anchors.rs  cut.rs  grid.rs  measure.rs  mod.rs  pan.rs  pap.rs  pen.rs  prelude.rs  select.rs  shapes.rs  vws.rs  zoom.rs
src/tools/anchors/: dialog.rs  mod.rs
src/tools/console/: commands.rs  mod.rs
src/tools/dash/: dialog.rs  mod.rs
src/tools/guidelines/: dialog.rs  mod.rs
src/tools/image/: dialog.rs  mod.rs
src/tools/pan/: mod.rs
src/tools/pap/: dialog.rs  mod.rs
src/tools/pen/: mod.rs
src/tools/pen/modes/: cubic.rs  hyper.rs  mod.rs  quad.rs
src/tools/select/: dialog.rs  mod.rs
src/tools/shapes/: dialog.rs  mod.rs
src/tools/vws/: dialog.rs  mod.rs  util.rs
src/user_interface/: egui_manager.rs  follow.rs  grid.rs  gui.rs  icons.rs  mod.rs  mouse_input.rs  popout.rs  sdl.rs  skulpin.rs  skulpin_render.rs  util.rs  viewport.rs  window.rs
src/user_interface/egui_manager/: fonts.rs  mod.rs  visuals.rs
src/user_interface/gui/: canvas_context.rs  layer_list.rs  menu_bar.rs  mod.rs  msgbox.rs  prompts.rs  textedit_buffer.rs  tool_bar.rs  tool_dialog.rs  window.rs
src/user_interface/gui/icons/: button.rs  mod.rs
src/user_interface/gui/windows/: grid_window.rs  inspection_window.rs  layer_list.rs  mod.rs  tool_window.rs
src/util/: argparser.rs  macros.rs  math.rs  mod.rs
util/: add_all.sh  tree.sh
