[package]
name = "MFEKglif"
version = "1.0.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>", "Matthew Blanchard <matthewrblanchard@gmail.com>"] # + MFEK authors
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For display
# We might need to vendorize these some day. See aclysma/skulpin#66:
# https://github.com/aclysma/skulpin/issues/66#issuecomment-689244118
# Commented versions I occasionally use in development to stick extra debug!'s in Skulpin.
#skulpin = { version = "0.10.0", default-features = false, features = ["skia_complete", "skulpin_winit"] }
#skulpin = { path = "../skulpin", default-features = false, features = ["skia_complete", "skulpin_winit"] }
#skulpin-plugin-imgui = { path = "../skulpin/skulpin-plugin-imgui" }
skulpin = { version = "0.14" }
skulpin-renderer = "0.14"

# For windowing, contexts, and events
sdl2 = { version = ">=0.34", features = ["raw-window-handle"] }

# For choosing font for toolbox
font-kit = "0.10"

# For global state
lazy_static = "1.4"

# For immediate mode GUI
imgui = "0.7"
imgui-sdl2 = "0.14"
imgui-skia-renderer = {git = "https://github.com/MFEK/imgui-skia-renderer.rlib", branch = "main"}

# For argument parsing
clap = "2.33"
git-version = "0.3"

# For UI toggles
enum-iterator = "=0.6.0"

# Display backtraces
backtrace = "0.3"
colored = "2.0"

# Right now only for pasting into console
clipboard = "0.5"

# Logging
log = "0.4"
env_logger = "0.8"

# Gives us derive(Display)
derive_more = "0.99"

# File dialog
nfd = { git = "https://github.com/raphlinus/nfd-rs", rev = "5e09b79bf511e3a91ae8cefdb96e9734fa4a79c2" }

# Command parsing for console
regex = "1"

## Our crates
# parses .glif files and gives us a place to put arbitrary data
glifparser = { git = "https://github.com/MFEK/glifparser.rlib", branch = "master", features=["skia", "mfek"] }
#glifparser = { path = "../glifparser.rlib", features=["skia", "mfek"] } # for development

MFEKmath = { git = "https://github.com/MFEK/math.rlib", branch = "main" }
#MFEKmath = { path = "../math.rlib" } # for development

pub-mod = { git = "https://github.com/MFEK/pub_mod.rlib" }

mfek-ipc = { git = "https://github.com/MFEK/ipc.rlib" }
#mfek-ipc = { path = "../ipc.rlib" }

#xml parsing
xmltree = "0.10"

# trait object-safe cloning
dyn-clone = "1.0"

#config file directory resolution
directories = "3"

#converting enums to strings
strum = "0.21"
strum_macros = "0.21"

#for logo, could be used in future for background images
image = { version = "0.23", features = ["png"], default-features = false }

# for certain Bézier curve manipulation functions
flo_curves = { git = "https://github.com/MFEK/flo_curves", branch = "master" }

# for exporting UFO .glif files to layers
plist = "1"

# See src/util/mod.rs::set_codepage_utf8
[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
